<resources>
    <string name="app_name">Count My Chant</string>
    <string name="count_hint">Enter Count</string>
    <string name="current_count_label">Current Count: %1$d</string>
    <string name="recognized_mantra_label">Recognized Mantra: %1$s</string>
    <string name="reset_button_text">Reset</string>
    <string name="start_chanting_button_text">Start Chanting</string>
    <string name="stop_chanting_button_text">Stop Chanting</string>
</resources>