<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/mantraSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/mantra_options"
            android:padding="16dp" />

        <EditText
            android:id="@+id/countInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mantraSpinner"
            android:layout_marginTop="60dp"
            android:autofillHints="number"
            android:hint="@string/count_hint"
            android:inputType="number"
            android:padding="16dp"
            android:textColor="@color/editTextColor" />

        <Button
            android:id="@+id/startChantingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/countInput"
            android:layout_marginTop="60dp"
            android:text="@string/start_chanting_button_text" />

        <TextView
            android:id="@+id/currentCountLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/startChantingButton"
            android:layout_marginTop="60dp"
            android:text="@string/current_count_label" />

        <TextView
            android:id="@+id/recognizedMantraLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentCountLabel"
            android:layout_marginTop="100dp"
            android:text="@string/recognized_mantra_label" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recognizedMantraLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="@string/reset_button_text" />

    </RelativeLayout>

</ScrollView>
